--- a/assets/css/pricing.css
+++ b/assets/css/pricing.css
@@ -117,15 +117,24 @@ ul.list_wrapper svg {
 }  
 
 
-.table-style3.price-position-yes .pac_price_str {    
+.table-style3.price-position-top .pac_price_str {    
     grid-row: 1/span 1;    
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    transform: translateY(-100px);   
+    transform: translateY(-50%);   
 } 
+
+.table-style3.price-position-top_nolap .pac_price_str {    
+    grid-row: 1/span 1; 
+
+    }
+
+.table-style3.price-position-overlap .pac_price_str {        
+    transform: translateY(-50%);   
+}
 
 .table-style3 .pac_price_str{
     margin:0 auto;
